--- a/interview/浏览器.md
+++ b/interview/浏览器.md
@@ -23,7 +23,7 @@
 
 ### 从输入URL到页面展示
 
-1. 用户输入  
+#### 1.用户输入  
 
 当用户在地址栏中输入一个查询关键字时，地址栏会判断输入的关键字是搜索内容，还是请求的URL
 
@@ -36,10 +36,84 @@
 
 > 注：URL由 协议名(如http) + 网站名(服务名(如www) + 域名(baidu.com) -> www.baidu.com) 构成
 
-2. URL请求过程
+#### 2.URL请求过程（关键词：IPC/URL请求/本地缓存检查/DNS解析/TLS连接/TCP连接）
 
 > 页面资源请求过程。浏览器进程会通过进程间通信（IPC）把URL请求发送至网络进程，网络进程接收到URL请求后，会发起真正的URL请求流程。
 
 首先，网络进程会查找本地缓存是否缓存了该资源。
 
-+ 如果有缓存资源
++ 如果有缓存资源，直接返回资源给浏览器进程
++ 如果没有查找到资源，那么进入网络请求流程  
+  请求前的第一步是要进行`DNS解析`，以`获取请求域名的服务器IP地址`。如果请求`协议是HTTPS`，那么还需要`建立TLS连接`。
+
+接下来就是利用IP地址和服务器建立TCP连接。连接建立之后，浏览器端会构建请求行，请求头等信息，并把和该`域名相关的Cookie等数据附加到请求头中`，然后像服务器发送构建的请求。
+
+服务端接受到请求信息后，会根据请求信息生成相应数据（包括响应行，响应头和响应体等信息），并发给网络进程。等网络进程接收了响应行和响应头之后，就开始解析响应头的内容。
+
+（1）重定向
+
+  网络进程解析服务器返回的响应头，如果发现状态码是`301`或`302`，那么说明服务器需要浏览器重定向到其他URL。这时网络进行会从响应头的`Location`字段里面读取重定向的地址，然后再发起新的HTTP或HTTPS请求。
+  > 在导航过程中，如果服务器响应的状态码包含了301，302一类的跳转信息，浏览器就会跳转到新的地址继续导航；如果响应行是200，那么表示浏览器可以继续处理该请求。
+
+（2）响应数据类型处理  
+
+  **如何区分URL请求的数据类型？**
+
+  `Content-Type`：Content-Type是HTTP头中一个非常重要的字段，它告诉浏览器返回的响应体数据是什么类型，然后浏览器根据Content-Type的值来决定如何显示响应体的内容。
+
++ 如果`Content-Type`字段的值被浏览器判断为**下载类型，那么该请求会被提交给浏览器的下载管理器，同时该URL请求的导航流程就此结束**
++ 如果是**HTML，那么浏览器会继续进行导航流程**
+
+#### 3.准备渲染进程
+
+### 【其他人总结】
+
+【其他人总结1】
+结合老师的讲义，自己总结了下，不考虑用户输入搜索关键字的情况：
+    1，用户输入url并回车
+    2，浏览器进程检查url，组装协议，构成完整的url
+    3，浏览器进程通过进程间通信（IPC）把url请求发送给网络进程
+    4，网络进程接收到url请求后检查本地缓存是否缓存了该请求资源，如果有则将该资源返回给浏览器进程
+    5，如果没有，网络进程向web服务器发起http请求（网络请求），请求流程如下：
+        5.1 进行DNS解析，获取服务器ip地址，端口（端口是通过dns解析获取的吗？这里有个疑问）
+        5.2 利用ip地址和服务器建立tcp连接
+        5.3 构建请求头信息
+        5.4 发送请求头信息
+        5.5 服务器响应后，网络进程接收响应头和响应信息，并解析响应内容
+    6，网络进程解析响应流程；
+        6.1 检查状态码，如果是301/302，则需要重定向，从Location自动中读取地址，重新进行第4步
+            （301/302跳转也会读取本地缓存吗？这里有个疑问），如果是200，则继续处理请求。
+        6.2 200响应处理：
+            检查响应类型Content-Type，如果是字节流类型，则将该请求提交给下载管理器，该导航流程结束，不再进行
+            后续的渲染，如果是html则通知浏览器进程准备渲染进程准备进行渲染。
+    7，准备渲染进程
+        7.1 浏览器进程检查当前url是否和之前打开的渲染进程根域名是否相同，如果相同，则复用原来的进程，如果不同，则开启新的渲染进程
+    8. 传输数据、更新状态
+        8.1 渲染进程准备好后，浏览器向渲染进程发起“提交文档”的消息，渲染进程接收到消息和网络进程建立传输数据的“管道”
+        8.2 渲染进程接收完数据后，向浏览器发送“确认提交”
+        8.3 浏览器进程接收到确认消息后更新浏览器界面状态：安全、地址栏url、前进后退的历史状态、更新web页面。
+
+【其他人总结2】
+
+1. 用户输入URL，浏览器会根据用户输入的信息判断是搜索还是网址，如果是搜索内容，就将搜索内容+默认搜索引擎合成新的URL；如果用户输入的内容符合URL规则，浏览器就会根据URL协议，在这段内容上加上协议合成合法的URL
+2. 用户输入完内容，按下回车键，浏览器导航栏显示loading状态，但是页面还是呈现前一个页面，这是因为新页面的响应数据还没有获得
+3. 浏览器进程浏览器构建请求行信息，会通过进程间通信（IPC）将URL请求发送给网络进程
+GET /index.html HTTP1.1
+4. 网络进程获取到URL，先去本地缓存中查找是否有缓存文件，如果有，拦截请求，直接200返回；否则，进入网络请求过程
+5. 网络进程请求DNS返回域名对应的IP和端口号，如果之前DNS数据缓存服务缓存过当前域名信息，就会直接返回缓存信息；否则，发起请求获取根据域名解析出来的IP和端口号，如果没有端口号，http默认80，https默认443。如果是https请求，还需要建立TLS连接。
+6. Chrome 有个机制，同一个域名同时最多只能建立 6 个TCP 连接，如果在同一个域名下同时有 10 个请求发生，那么其中 4 个请求会进入排队等待状态，直至进行中的请求完成。如果当前请求数量少于6个，会直接建立TCP连接。
+7. TCP三次握手建立连接，http请求加上TCP头部——包括源端口号、目的程序端口号和用于校验数据完整性的序号，向下传输
+8. 网络层在数据包上加上IP头部——包括源IP地址和目的IP地址，继续向下传输到底层
+9. 底层通过物理网络传输给目的服务器主机
+10. 目的服务器主机网络层接收到数据包，解析出IP头部，识别出数据部分，将解开的数据包向上传输到传输层
+11. 目的服务器主机传输层获取到数据包，解析出TCP头部，识别端口，将解开的数据包向上传输到应用层
+12. 应用层HTTP解析请求头和请求体，如果需要重定向，HTTP直接返回HTTP响应数据的状态code301或者302，同时在请求头的Location字段中附上重定向地址，浏览器会根据code和Location进行重定向操作；如果不是重定向，首先服务器会根据 请求头中的If-None-Match 的值来判断请求的资源是否被更新，如果没有更新，就返回304状态码，相当于告诉浏览器之前的缓存还可以使用，就不返回新数据了；否则，返回新数据，200的状态码，并且如果想要浏览器缓存数据的话，就在相应头中加入字段：
+Cache-Control:Max-age=2000
+响应数据又顺着应用层——传输层——网络层——网络层——传输层——应用层的顺序返回到网络进程
+13. 数据传输完成，TCP四次挥手断开连接。如果，浏览器或者服务器在HTTP头部加上如下信息，TCP就一直保持连接。保持TCP连接可以省下下次需要建立连接的时间，提示资源加载速度
+Connection:Keep-Alive
+14. 网络进程将获取到的数据包进行解析，根据响应头中的Content-type来判断响应数据的类型，如果是字节流类型，就将该请求交给下载管理器，该导航流程结束，不再进行；如果是text/html类型，就通知浏览器进程获取到文档准备渲染
+15. 浏览器进程获取到通知，根据当前页面B是否是从页面A打开的并且和页面A是否是同一个站点（根域名和协议一样就被认为是同一个站点），如果满足上述条件，就复用之前网页的进程，否则，新创建一个单独的渲染进程
+16. 浏览器会发出“提交文档”的消息给渲染进程，渲染进程收到消息后，会和网络进程建立传输数据的“管道”，文档数据传输完成后，渲染进程会返回“确认提交”的消息给浏览器进程
+17. 浏览器收到“确认提交”的消息后，会更新浏览器的页面状态，包括了安全状态、地址栏的 URL、前进后退的历史状态，并更新web页面，此时的web页面是空白页
+18. 渲染进程对文档进行页面解析和子资源加载，HTML 通过HTM 解析器转成DOM Tree（二叉树类似结构的东西），CSS按照CSS 规则和CSS解释器转成CSSOM TREE，两个tree结合，形成render tree（不包含HTML的具体元素和元素要画的具体位置），通过Layout可以计算出每个元素具体的宽高颜色位置，结合起来，开始绘制，最后显示在屏幕中新页面显示出来
