--- a/interview/浏览器.md
+++ b/interview/浏览器.md
@@ -55,7 +55,7 @@
   网络进程解析服务器返回的响应头，如果发现状态码是`301`或`302`，那么说明服务器需要浏览器重定向到其他URL。这时网络进行会从响应头的`Location`字段里面读取重定向的地址，然后再发起新的HTTP或HTTPS请求。
   > 在导航过程中，如果服务器响应的状态码包含了301，302一类的跳转信息，浏览器就会跳转到新的地址继续导航；如果响应行是200，那么表示浏览器可以继续处理该请求。
 
-（2）响应数据类型处理  
+（2）响应数据类型处理 1
 
   **如何区分URL请求的数据类型？**
 
