--- a/interview/浏览器.md
+++ b/interview/浏览器.md
@@ -2,7 +2,7 @@
 
 [TOC]
 
-## 主流浏览器
+## 主流浏览器介绍
 
 ![1650338475554](C:\Users\鄂继业\AppData\Roaming\Typora\typora-user-images\1650338475554.png)
 
@@ -15,7 +15,9 @@
   d.渲染进程准备好后，需要先向渲染进程提交页面数据，称之为`提交文档`；
   e.渲染进程接收完文档信息之后，便开始`解析页面和加载子资源`，完成页面的渲染。
 
-### 浏览器进程、渲染进程和网络进程的主要职责
+> 浏览器的导航过程，涵盖了从用户发起请求到提交文档给渲染进程的中间所有阶段
+
+### 浏览器进程、渲染进程和网络进程
 
 + `浏览器进程`主要负责用户交互、子进程管理和文件存储等功能
 + `网络进程`是面向渲染进程和浏览器进程等提供网络下载功能
@@ -66,9 +68,49 @@
 
 #### 3.准备渲染进程
 
-### 【其他人总结】
+> Chrome的默认策略（process-per-site-instance）是，每个标签对应一个渲染进程。但**如果从一个页面打开了另一个新的页面，而新的页面和当前页面属于同一站点的话，那么新页面会复用父页面的渲染进程**  
+> 渲染进程准备好后，还不能立即进入文档解析状态，因为此时的文档数据还在网络进程中，并没有提交给渲染进程。
 
-【其他人总结1】
++ **同一站点：**`同一站点`定义为 `根域名(geekbang.org)`加上`协议(https:// or http://)`，还包含了`该根域名下的所有子域名和不同的端口`，如
+
+```markdown
+  https://time.geekbang.org
+  https://www.geekbang.org
+  https://www.geekbang.org:8080
+```
+
++ **渲染进程策略**
+
+  + 通常情况下，打开新的页面都会使用单独的渲染进程；
+  + 如果从A页面打开B页面，且A与B都属于`同一站点`，那么B页面复用A页面的渲染进程；如果是其他情况，浏览器进程则会为B创建一个新的渲染进程。
+
+#### 4.提交文档
+
+> "文档"是指URL请求的响应体数据。
+
++ "提交文档"的消息是由浏览器进程发出的，渲染进程接收到"提交文档"的消息后，会和网路进程`建立传输数据的"管道"`
++ 文档传输完成后，渲染进程会`返回"确认提交"的消息`给浏览器进程
++ 浏览器进程在收到"确认提交"的消息后，会`更新浏览器界面状态`，包括了安全状态、地址栏的URL、前进后退的历史状态，并更新Web页面。
+
+注：到这里，一个完整的导航流程就 "走" 完了，这之后要进入渲染阶段。
+
+#### 5.渲染阶段
+
+> 一旦文档被提交，渲染进程就开始页面解析和子资源加载了。
+
+### 总结
+
+#### Personal
+
+```markdown
+  1.
+```
+
+#### Others
+
++ Others I
+
+```markdown
 结合老师的讲义，自己总结了下，不考虑用户输入搜索关键字的情况：
     1，用户输入url并回车
     2，浏览器进程检查url，组装协议，构成完整的url
@@ -92,28 +134,33 @@
         8.1 渲染进程准备好后，浏览器向渲染进程发起“提交文档”的消息，渲染进程接收到消息和网络进程建立传输数据的“管道”
         8.2 渲染进程接收完数据后，向浏览器发送“确认提交”
         8.3 浏览器进程接收到确认消息后更新浏览器界面状态：安全、地址栏url、前进后退的历史状态、更新web页面。
+```
 
-【其他人总结2】
++ Others II
 
-1. 用户输入URL，浏览器会根据用户输入的信息判断是搜索还是网址，如果是搜索内容，就将搜索内容+默认搜索引擎合成新的URL；如果用户输入的内容符合URL规则，浏览器就会根据URL协议，在这段内容上加上协议合成合法的URL
-2. 用户输入完内容，按下回车键，浏览器导航栏显示loading状态，但是页面还是呈现前一个页面，这是因为新页面的响应数据还没有获得
-3. 浏览器进程浏览器构建请求行信息，会通过进程间通信（IPC）将URL请求发送给网络进程
-GET /index.html HTTP1.1
-4. 网络进程获取到URL，先去本地缓存中查找是否有缓存文件，如果有，拦截请求，直接200返回；否则，进入网络请求过程
-5. 网络进程请求DNS返回域名对应的IP和端口号，如果之前DNS数据缓存服务缓存过当前域名信息，就会直接返回缓存信息；否则，发起请求获取根据域名解析出来的IP和端口号，如果没有端口号，http默认80，https默认443。如果是https请求，还需要建立TLS连接。
-6. Chrome 有个机制，同一个域名同时最多只能建立 6 个TCP 连接，如果在同一个域名下同时有 10 个请求发生，那么其中 4 个请求会进入排队等待状态，直至进行中的请求完成。如果当前请求数量少于6个，会直接建立TCP连接。
-7. TCP三次握手建立连接，http请求加上TCP头部——包括源端口号、目的程序端口号和用于校验数据完整性的序号，向下传输
-8. 网络层在数据包上加上IP头部——包括源IP地址和目的IP地址，继续向下传输到底层
-9. 底层通过物理网络传输给目的服务器主机
-10. 目的服务器主机网络层接收到数据包，解析出IP头部，识别出数据部分，将解开的数据包向上传输到传输层
-11. 目的服务器主机传输层获取到数据包，解析出TCP头部，识别端口，将解开的数据包向上传输到应用层
-12. 应用层HTTP解析请求头和请求体，如果需要重定向，HTTP直接返回HTTP响应数据的状态code301或者302，同时在请求头的Location字段中附上重定向地址，浏览器会根据code和Location进行重定向操作；如果不是重定向，首先服务器会根据 请求头中的If-None-Match 的值来判断请求的资源是否被更新，如果没有更新，就返回304状态码，相当于告诉浏览器之前的缓存还可以使用，就不返回新数据了；否则，返回新数据，200的状态码，并且如果想要浏览器缓存数据的话，就在相应头中加入字段：
-Cache-Control:Max-age=2000
-响应数据又顺着应用层——传输层——网络层——网络层——传输层——应用层的顺序返回到网络进程
-13. 数据传输完成，TCP四次挥手断开连接。如果，浏览器或者服务器在HTTP头部加上如下信息，TCP就一直保持连接。保持TCP连接可以省下下次需要建立连接的时间，提示资源加载速度
-Connection:Keep-Alive
-14. 网络进程将获取到的数据包进行解析，根据响应头中的Content-type来判断响应数据的类型，如果是字节流类型，就将该请求交给下载管理器，该导航流程结束，不再进行；如果是text/html类型，就通知浏览器进程获取到文档准备渲染
-15. 浏览器进程获取到通知，根据当前页面B是否是从页面A打开的并且和页面A是否是同一个站点（根域名和协议一样就被认为是同一个站点），如果满足上述条件，就复用之前网页的进程，否则，新创建一个单独的渲染进程
-16. 浏览器会发出“提交文档”的消息给渲染进程，渲染进程收到消息后，会和网络进程建立传输数据的“管道”，文档数据传输完成后，渲染进程会返回“确认提交”的消息给浏览器进程
-17. 浏览器收到“确认提交”的消息后，会更新浏览器的页面状态，包括了安全状态、地址栏的 URL、前进后退的历史状态，并更新web页面，此时的web页面是空白页
-18. 渲染进程对文档进行页面解析和子资源加载，HTML 通过HTM 解析器转成DOM Tree（二叉树类似结构的东西），CSS按照CSS 规则和CSS解释器转成CSSOM TREE，两个tree结合，形成render tree（不包含HTML的具体元素和元素要画的具体位置），通过Layout可以计算出每个元素具体的宽高颜色位置，结合起来，开始绘制，最后显示在屏幕中新页面显示出来
+```markdown
+  1. 用户输入URL，浏览器会根据用户输入的信息判断是搜索还是网址，如果是搜索内容，就将搜索内容+默认搜索引擎合成新的URL；如果用户输入的内容符合URL规则，浏览器就会根据URL协议，在这段内容上加上协议合成合法的URL
+  2. 用户输入完内容，按下回车键，浏览器导航栏显示loading状态，但是页面还是呈现前一个页面，这是因为新页面的响应数据还没有获得
+  3. 浏览器进程浏览器构建请求行信息，会通过进程间通信（IPC）将URL请求发送给网络进程
+  GET /index.html HTTP1.1
+  4. 网络进程获取到URL，先去本地缓存中查找是否有缓存文件，如果有，拦截请求，直接200返回；否则，进入网络请求过程
+  5. 网络进程请求DNS返回域名对应的IP和端口号，如果之前DNS数据缓存服务缓存过当前域名信息，就会直接返回缓存信息；否则，发起请求获取根据域名解析出来的IP和端口号，如果没有端口号，http默认80，https默认443。如果是https请求，还需要建立TLS连接。
+  6. Chrome 有个机制，同一个域名同时最多只能建立 6 个TCP 连接，如果在同一个域名下同时有 10 个请求发生，那么其中 4 个请求会进入排队等待状态，直至进行中的请求完成。如果当前请求数量少于6个，会直接建立TCP连接。
+  7. TCP三次握手建立连接，http请求加上TCP头部——包括源端口号、目的程序端口号和用于校验数据完整性的序号，向下传输
+  8. 网络层在数据包上加上IP头部——包括源IP地址和目的IP地址，继续向下传输到底层
+  9. 底层通过物理网络传输给目的服务器主机
+  10. 目的服务器主机网络层接收到数据包，解析出IP头部，识别出数据部分，将解开的数据包向上传输到传输层
+  11. 目的服务器主机传输层获取到数据包，解析出TCP头部，识别端口，将解开的数据包向上传输到应用层
+  12. 应用层HTTP解析请求头和请求体，如果需要重定向，HTTP直接返回HTTP响应数据的状态code301或者302，同时在请求头的Location字段中附上重定向地址，浏览器会根据code和Location进行重定向操作；如果不是重定向，首先服务器会根据 请求头中的If-None-Match 的值来判断请求的资源是否被更新，如果没有更新，就返回304状态码，相当于告诉浏览器之前的缓存还可以使用，就不返回新数据了；否则，返回新数据，200的状态码，并且如果想要浏览器缓存数据的话，就在相应头中加入字段：
+  Cache-Control:Max-age=2000
+  响应数据又顺着应用层——传输层——网络层——网络层——传输层——应用层的顺序返回到网络进程
+  13. 数据传输完成，TCP四次挥手断开连接。如果，浏览器或者服务器在HTTP头部加上如下信息，TCP就一直保持连接。保持TCP连接可以省下下次需要建立连接的时间，提示资源加载速度
+  Connection:Keep-Alive
+  14. 网络进程将获取到的数据包进行解析，根据响应头中的Content-type来判断响应数据的类型，如果是字节流类型，就将该请求交给下载管理器，该导航流程结束，不再进行；如果是text/html类型，就通知浏览器进程获取到文档准备渲染
+  15. 浏览器进程获取到通知，根据当前页面B是否是从页面A打开的并且和页面A是否是同一个站点（根域名和协议一样就被认为是同一个站点），如果满足上述条件，就复用之前网页的进程，否则，新创建一个单独的渲染进程
+  16. 浏览器会发出“提交文档”的消息给渲染进程，渲染进程收到消息后，会和网络进程建立传输数据的“管道”，文档数据传输完成后，渲染进程会返回“确认提交”的消息给浏览器进程
+  17. 浏览器收到“确认提交”的消息后，会更新浏览器的页面状态，包括了安全状态、地址栏的 URL、前进后退的历史状态，并更新web页面，此时的web页面是空白页
+  18. 渲染进程对文档进行页面解析和子资源加载，HTML 通过HTM 解析器转成DOM Tree（二叉树类似结构的东西），CSS按照CSS 规则和CSS解释器转成CSSOM TREE，两个tree结合，形成render tree（不包含HTML的具体元素和元素要画的具体位置），通过Layout可以计算出每个元素具体的宽高颜色位置，结合起来，开始绘制，最后显示在屏幕中新页面显示出来
+```
+
+## 渲染流程：HTML、CSS和JavaScript是如何变成页面的？
