--- a/interview/浏览器.md
+++ b/interview/浏览器.md
@@ -164,3 +164,102 @@
 ```
 
 ## 渲染流程：HTML、CSS和JavaScript是如何变成页面的？
+
+> HTML， CSS，JavaScript数据，经过**渲染模块**处理，最终输出为屏幕上的像素
+
+由于渲染机制过于复杂，渲染模块在执行过程中会被划分为很多个子阶段，输入的HTML经过这些子阶段，最后输出为像素。这样的一个处理流程叫做 **渲染流水线**。
+
+按照时间顺序，流水线可分为如下几个子阶段：构建DOM树，样式计算，布局阶段，分层，绘制，光栅化，合成和显示。
+
+**`渲染流程阶段：`**
+
++ 浏览器不能直接理解HTML结构，在HTML页面内容被提交给渲染引擎之后，渲染引擎首先将HTML解析为浏览器能够理解的**DOM树**结构；
+
++ 渲染引擎将CSS样式表转化为浏览器可以理解的**styleSheets**, 计算出DOM树所有节点的样式；
+
++ 然后计算DOM元素的布局信息（每个元素的几何位置），并将信息都保存在**布局树**中；
+
++ 接着对布局树进行分层，并生成**分层树**；
+
++ 为每个分层树生成**绘制列表**，并将其提交到合成线程；
+
++ 合成线程将图层分成**图块**，并在**光栅化线程池**中将图块转换成位图；
+
++ 合成线程发送绘制图块命令**DrawQuad**给浏览器进程；
+
++ 浏览器进程DrawQuad消息**生成页面**，并**显示**到显示器上。
+
+### （一）构建DOM树
+
+> 为什么构建DOM树？**因为浏览器无法直接理解和使用HTML，所以需要将HTML转换为浏览器能够理解的结构 - DOM树。**
+
+![DOM树构建过程示意图]()
+
+1. 构建DOM树的`输入内容`是一个非常简单的HTML文件，然后经**由`HTML解析器`解析，最终输出树状结构的`DOM`**。
+2. DOM是保存在内存中的树状结构，可以通过JavaScript来查询或修改其内容。
+
+### （二）样式计算
+
+> 样式计算的目的是为了计算出DOM节点中每个元素的具体样式。
+
+1. 把CSS转换为浏览器能够理解的结构
+
+   浏览器无法直接理解这些纯文本的CSS样式，**当`渲染引擎`收到CSS文本时，会执行一个转换操作，将CSS文本转换为浏览器可以理解的结构 - `styleSheets`**。
+
+2. 转换样式表中的属性值，使其标准化
+
+   **`属性值标准化`操作：** CSS文本中有很多属性值，如2em，blue，bold等，这类数值不容易被渲染引擎理解，所以`需要将所有值转换为渲染引擎容易理解，标准化的计算值`，这个过程就是属性值标准化。
+
+3. 计算出DOM树中每个节点的具体样式
+
+   计算DOM树中每个节点的样式熟悉，涉及到CSS继承规则和层叠规则
+
+   + CSS继承：就是每个DOM节点都包含有父节点的样式。
+
+   + 样式层叠：层叠是CSS的一个基本特征，它是一个定义了如何合并来自多个源的属性值的算法。
+
+### （三）布局阶段
+
+> 需要计算出DOM树中可见元素的几何位置，把这个计算过程叫做布局。布局阶段需要完成两个任务：创建布局树和布局计算。
+
+1. 创建布局树
+
+   在DOM树显示前，还要额外地构建一棵**只包含可见元素**布局树。
+
+   为了构建布局树，浏览器大体完成下面这些工作：
+
+   + 遍历DOM树中的所有可见节点，并把这些节点加到布局中；
+
+   + 不可见的节点忽略掉（如属性包含：display: none）。
+
+2. 布局计算
+
+> 计算布局树节点的坐标位置。
+
+### （四）分层
+
+> 渲染引擎还需要为特定的节点（设置3d变换/z-index/z-index/页面滚动等）生成专用的图层，并生成一棵对应的图层树（LayerTree）
+
+不是布局树等每个节点都包含一个图层，如果一个节点没有对应的层，那么这个节点就从属于父节点的图层
+
++ 拥有层叠上下文属性的元素会被提升为单独的一层
+
++ 需要裁剪（clip）的地方也会被创建为图层
+
+### （五）绘制
+
+> 完成图层树的构建后，渲染引擎会对每个图层进行绘制。渲染引擎会把一个图层的绘制拆分成很多小的`绘制指令`，然后再把这些指令按照顺序组成一个待绘制列表
+
+### （六）栅格化操作
+
+> 绘制列表只是用来记录绘制顺序和绘制指令的列表，而实际上`绘制操作`时由`渲染引擎的合成线程`来完成的。
+
+### （七）合成和显示
+
+## 浏览器缓存机制
+
+## 问题记录
+
+1. 从输入URL到页面展示，这中间发生了什么？
+2. 如果下载CSS文件阻塞了，会阻塞DOM树的合成吗？会阻塞页面显示吗？
+3. 为什么减少重绘，重排能优化web性能？具体有哪些方法可以减少重绘，重排？
