--- a/interview/浏览器.md
+++ b/interview/浏览器.md
@@ -254,6 +254,8 @@
 
 > 绘制列表只是用来记录绘制顺序和绘制指令的列表，而实际上`绘制操作`时由`渲染引擎的合成线程`来完成的。
 
++ 合成线程会按照视口附近的图块来优先生成位图，实际生成位图的操作是由栅格化来执行的。**所谓的栅格化，是指将图块转换成位图**。
+
 ### （七）合成和显示
 
 ## 浏览器缓存机制
