--- a/interview/浏览器.md
+++ b/interview/浏览器.md
@@ -263,5 +263,8 @@
 ## 问题记录
 
 1. 从输入URL到页面展示，这中间发生了什么？
+   + 用户输入信息，地址栏检测是否为URL请求，如果不是则使用浏览器默认搜索引擎，合成带搜索内容的新URL，如果是则加上协议，合成新的URL请求
+   + 浏览器通过IPC（进程间通信）将URL提交给网络进程。网络进程接受到URL后会发起真正的URL请求流程。
+   +
 2. 如果下载CSS文件阻塞了，会阻塞DOM树的合成吗？会阻塞页面显示吗？
 3. 为什么减少重绘，重排能优化web性能？具体有哪些方法可以减少重绘，重排？
